# impulse

./: CMakeLists.txt  README.md
src/: config.hpp  event.cpp  event.hpp  main.cpp  parser.cpp  parser.hpp  server.cpp  server.hpp  session_manager.cpp  session_manager.hpp  state.hpp  utils.hpp
tests/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
